# HardCut

./: CMakeLists.txt  README.md  main.cpp  resources.qrc
src/cpp/: Player.cpp  Player.h  main.cpp
src/qml/: FramelessTitleBar.qml  HardCut.qml  Welcome.qml  main.qml
src/qml/components/: OperationArea.qml  Player.qml
src/qml/utils/: ActionButton.qml  FramelessTitleBar.qml  HardCutTitleBar.qml
